Added more styles

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <div class="section-features">
             <figure>
                 <img src="images/kiernan-picture2.jpg" alt="Picture of Kiernan Proud" width="800">
-                <figcaption>Kiernan Proud leaning against a wall.</figcaption>
+                <figcaption>Kiernan Proud at Nazareth College.</figcaption>
             </figure>
           
         </div>
