--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3 class="h2-title">Digital Marketing Specialist from Rochester, New York. </h3>
     <div class="section-features">
             <figure>
-                <img src="images/kiernan-picture1.jpg" alt="Picture of Kiernan Proud" width="1000">
+                <img src="images/kiernan-picture1.jpg" alt="Kiernan Proud" width="1000">
                 <figcaption>Kiernan Proud at work.</figcaption>
             </figure>
           
